komet-bau: Lagt til convention plugin for Spring Boot